About: Rewrite the default rules They have become shorter and clearer. References to the official instance have been removed. An English version of the rules has also been added.

--- a/data/knowledgebase/rules.ru.textile
+++ b/data/knowledgebase/rules.ru.textile
@@ -1,58 +1,43 @@
 OpenVK-KB-Heading: Правила
 
-Добро пожаловать на *инстанцию OpenVK* имени Веселкрафта. OpenVK -- социальная сеть с открытым исходным кодом, которая помогает людям поддерживать связь со своими друзьями и заводить новых.
-Администрация этой инстанции разрешает вам пользоваться ею на условиях, которые определены в этом документе (далее по тексту - правила).
+Администрация сайта разрешает Вам пользоваться сайтом на условиях, которые определены в этих правилах.
+Делать можно всё то, что не относится к запрещённым действиям, а к ним относятся:
 
-h3. Статус этих правил
+# Отказ от подчинения правилам или их игнорирование,
+# Отказ от своевременного исполнения запросов агентов тех. поддержки или администрации,
+# Использование чужих страниц без разрешения владельца,
+# Выдача себя за других людей для получения выгоды. Исключения:
+## Человек разрешил использование своей личности,
+## Человек является оригинальным персонажем, принадлежащим Вам
+# Создание массовых рассылок любым способом,
+# Создание ситуаций, любым образом мешающих работе OpenVK, 
+# Публикация и хранение на ресурсе любого содержимого, которое:
+## Является незаконным на территории Франции или Вашей страны проживания,
+## Содержит порнографические сцены с участием лиц младше 18 лет,
+## Содержит рекламу запрещенных в Франции или Вашей стране проживания препаратов или инструкции по их приготовлению, 
+## Содержит информацию, запрещённую на территории Франции или Вашей страны проживания,
+## Содержит сцены бесчеловечного обращения с людьми или животными,
+## Нарушает авторские и смежные права,
+## Нарушает права человека,
+## Мешает пользователям исполнять правила или нормально пользоваться услугами, предоставляемыми проектом OpenVK.
 
-Эти правила являются черновиком. Мы их ещё дорабатываем и приниманием предложения от пользователей. Но не смотря на это, эти правила всё равно действуют и к Вам могут быть применены санкции из-за их нарушения.
-Эти правила могут изменяться без уведомления. Продолжение использования инстанции OpenVK будет означать согласие с ними.
+Администрация является высшим органом власти, имеющим полное право принимать решения насчёт спорных ситуаций, не описанных в правилах.
 
-h3. Область действия этих правил
+Администрация может выдать наказание, если пользователи:
 
-Эти правила распостраняются только на эту инстанцию OpenVK, а именно на всё, что расположено на домене openvk2.veselcraft.ru (включая все его поддомены).
-За пределами этой инстанции правила не действуют и Вы в праве делать всё, что посчитаете нужным.
+# Публикуют запрещённый контент на страницах других пользователей,
+# Обманывают администрацию или агентов тех. поддержки,
+# Вводят в заблуждение пользователей сайта,
+# Публично критикуют OpenVK или администрацию с целью унизить или оскорбить участников проекта или его руководителей,
+# Забанены в официальных чатах OpenVK в Telegram,
+# Не уважают администрацию проекта или агентов тех. поддержки.
 
-h3. Что можно делать?
+При нарушении правил, администрация может:
 
-Делать можно всё, что не запрещено. А запрещено:
-# Не следовать правилам
-# Не отвечать своевременно на запросы от техподдержки или Администрации
-# Выдавать себя за других людей
-## Если это не было разрешено явно другим человеком
-## Если другой человек на самом деле оригинальный персонаж, который принадлежит Вам
-## Также нельзя заходить на чужие страницы без разрешения (взлом жопы)
-# Делать массовые рассылки любым способом
-# Мешать любым образом работе OpenVK
-# Загружать на сайт и с сайта любым образом любое содержимое, которое:
-## Не является законным на територии Нидерландов и Вашей страны проживания:
-### Содержит порнографию с участием несовершеннолетних лиц
-#### Если эти лица не являются вымышленными персонажами
-### Содержит рекламу наркотических препаратов или инструкции по их приготовлению
-### Содержит информацию закрытого доступа
-### Содержит сцены бесчеловечного обращения с животными
-### Нарушает авторские и смежные права
-### Нарушает права человека
-## Содержит спойлеры
-## Мешает другим пользователям исполнять правила
-## Мешает другим пользователям нормально пользоваться OpenVK
-## Администрация может посчитать недопустимым
-# Загружать "adult"-контент на страницах других пользователей без разрешения
-# Обманывать Администрацию и/или _неопределённую_ группу пользователей
-## Неопределённа группа пользователей -- пользователи, которых вы не знаете. Обманывать своих друзей можно.
-# Оскорблять OpenVK и/или Администрацию
-## Если это не оправданно
-# Быть забаненным в OpenVK Chat, /KDE/ или в чате, который располагается по имени traintovos
-# Не уважать Веселкрафта, Косфурлера и Джилл
+# Проигнорировать нарушение, являющееся незначительным,
+# Вынести пользователю предупреждение,
+# Выдать временную или постоянную блокировку,
+# Запретить в будущем пользоваться этим сайтом,
+# Удалить аккаунт или запрещенный контент.
 
-h3. Санкции за нарушение правил
-
-За нарушение этих правил, мы можем:
-# Проигнорировать нарушение
-# Вынести Вам устное предуреждение
-# Выдать временную или постоянную блокировку
-# Запретить Вам в будущем пользоваться этой инстанцией
-# Удалить Ваш контент и/или аккаунт
-
-Определение наказания и его последующее исполнение - обязанность Администрации.
-Также мы оставляем за собой право применить санкции к Вам не объясняя причин (если они вообще будут).
+Администрация может выдавать наказания без объяснения причины (даже если таковая имеется).
