--- a/locales/en.strings
+++ b/locales/en.strings
@@ -369,6 +369,8 @@
 "cut" = "Cut";
 "round_avatars" = "Round avatars";
 
+"apply_style_for_this_device" = "Apply style only for this device";
+
 "search_for_groups" = "Search for groups";
 "search_for_people" = "Search for people";
 "search_button" = "Find";
