--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -387,6 +387,8 @@
 "cut" = "Обрезка";
 "round_avatars" = "Круглый аватар";
 
+"apply_style_for_this_device" = "Применить стиль только для этого устройства";
+
 "search_for_groups" = "Поиск групп";
 "search_for_people" = "Поиск людей";
 "search_button" = "Найти";
