--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -313,7 +313,10 @@
 "name_note" = "Название";
 "text_note" = "Содержание";
 "create_note" = "Создать заметку";
+"edit_note" = "Редактировать заметку";
 "actions" = "Действия";
+
+"edited" = "Отредактировано";
 
 "notes_zero" = "Ни одной заметки";
 "notes_one" = "Одна заметка";
