--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -285,6 +285,12 @@
 "meetings_many" = "$1 встреч";
 "meetings_other" = "$1 встреч";
 
+"open_new_group" = "Открыть новую группу";
+"open_group_desc" = "Не можете найти нужную группу? Откройте свою...";
+"search_group" = "Поиск группы";
+"search_by_groups" = "Поиск по группам";
+"search_group_desc" = "Здесь Вы можете просмотреть существующие группы и выбрать группу себе по вкусу...";
+
 /* Albums */
 
 "create" = "Создать";
