--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -35,6 +35,13 @@
 "password_reset_error" = "Непредвиденная ошибка при сбросе пароля.";
 "password_reset_rate_limit_error" = "Нельзя делать это так часто, извините.";
 
+"email_sent" = "Письмо было успешно отправлено.";
+"email_sent_desc" = "Если ваш электронный адрес существует, вы получите письмо.";
+"email_error" = "Непредвиденная ошибка при отправке письма.";
+"email_rate_limit_error" = "Нельзя делать это так часто, извините.";
+
+"email_verify_success" = "Ваш Email был подтверждён. Приятного времяпрепровождения!";
+
 "registration_disabled_info" = "Регистрация отключена системным администратором. При возможности попросите приглашение у вашего знакомого, если он зарегистрирован на этом сайте.";
 "registration_closed" = "Регистрация закрыта.";
 "invites_you_to" = "<strong>$1</strong> приглашает вас в $2";
@@ -675,6 +682,14 @@
 "banned_1" = "Извините, <b>$1</b>, но вы были верискокнуты.";
 "banned_2" = "А причина этому проста: <b>$1</b>. К сожалению, на этот раз нам пришлось заблокировать вас навсегда.";
 "banned_3" = "Вы всё ещё можете <a href=\"/support?act=new\">написать в службу поддержки</a>, если считаете что произошла ошибка или <a href=\"/logout?hash=$1\">выйти</a>.";
+
+/* Registration confirm */
+
+"ec_header" = "Подтверждение регистрации";
+"ec_title" = "Спасибо!";
+"ec_1" = "<b>$1</b>, ваша регистрация почти закончена. В течении нескольких минут на ваш адрес E-mail должно прийти письмо с ссылкой для подтверждения вашего адреса почты.";
+"ec_2" = "Если по каким-то причинам вам не пришло письмо, то проверьте папку Спам. Если письма не окажется и там, то вы можете переотправить письмо.";
+"ec_resend" = "Переотправить письмо";
 
 /* Discussions */
 
