--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -225,6 +225,7 @@
 "subscriptions" = "Подписки";
 "join_community" = "Вступить в группу";
 "leave_community" = "Выйти из группы";
+"check_community" = "Просмотр группы";
 "min_6_community" = "Название должно быть не менее 6 символов";
 "participants" = "Участники";
 "groups" = "Группы";
@@ -278,6 +279,10 @@
 "groups_few" = "$1 группы";
 "groups_many" = "$1 групп";
 "groups_other" = "$1 групп";
+
+"groups_list_zero" = "Вы не состоите ни в одной группе";
+"groups_list_one" = "Вы состоите в одной группе";
+"groups_list_other" = "Вы состоите в $1 группах";
 
 "meetings_zero" = "Ни одной встречи";
 "meetings_one" = "Одна встреча";
