--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -324,9 +324,10 @@
 "note" = "Заметка";
 "name_note" = "Название";
 "text_note" = "Содержание";
-"create_note" = "Создать заметку";
+"create_note" = "Добавить запись";
 "edit_note" = "Редактировать заметку";
 "actions" = "Действия";
+"notes_start_screen" = "С помощью заметок Вы можете делиться событиями из жизни с друзьями, а так же быть в курсе того, что происходит у них.";
 
 "edited" = "Отредактировано";
 
@@ -335,6 +336,12 @@
 "notes_few" = "$1 заметки";
 "notes_many" = "$1 заметок";
 "notes_other" = "$1 заметок";
+
+"notes_list_zero" = "Не найдено ни одной заметки";
+"notes_list_one" = "Найдена одна заметка";
+"notes_list_few" = "Найдено $1 заметки";
+"notes_list_many" = "Найдено $1 заметок";
+"notes_list_other" = "Найдено $1 заметок";
 
 /* Menus */
 
@@ -502,7 +509,7 @@
 "info_uploaded_by" = "Загрузил";
 "info_upload_date" = "Дата загрузки";
 
-"videos_zero" = "Ни одной видеозаписи";
+"videos_zero" = "Нет видео";
 "videos_one" = "Одна видеозапись";
 "videos_few" = "$1 видеозаписи";
 "videos_many" = "$1 видеозаписей";
