--- a/locales/en.strings
+++ b/locales/en.strings
@@ -241,6 +241,7 @@
 "only_administrators" = "Only administrators";
 "website" = "Website";
 "managed" = "Managed";
+"size" = "Size";
 
 "administrators_one" = "$1 administrator";
 "administrators_other" = "$1 administrators";
